--- a/1.0.3_0 (M2) [FireFox]/pages/index.html
+++ b/1.0.3_0 (M2) [FireFox]/pages/index.html
@@ -7,20 +7,19 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <head>
+    <div>
       <img
         class="logo"
         width="128px"
         height="128px"
-        src="../icons/icon-128.png"
+        src="../images/icon-128.png"
         alt="logo"
       />
-      <h1 data-message="extensionName">Adblock for YouTube™</h1>
-    </head>
+      <h1 data-message="extensionName"></h1>
+    </div>
     <main>
       <p data-message="extensionDescription">
-        Privacy aware, secure Adblocker for YouTube™. Blocks Advertisements on
-        YouTube.com.
+
       </p>
 
       <p data-message="timesaveInfo" class="timesave-info">
@@ -28,8 +27,8 @@
       </p>
 
       <div class="control">
-        <label class="switch">
-          <input name="enabled" type="checkbox" />
+        <label class="switch setting">
+          <input name="enabled" type="checkbox"/>
           <span data-message="enabled">enabled</span>
         </label>
       </div>
